Fix overflow hidden list + fix #35

--- a/src/list/components/__style__/list.css
+++ b/src/list/components/__style__/list.css
@@ -1,10 +1,5 @@
 @import "react-toolbox/lib/table/theme.css";
 
-.list,
-.mosaic {
-    overflow: hidden;
-}
-
 .list ul,
 .mosaic ul {
     list-style: none;
